refactoring & fix